test/types/range/diten/rangecastbounds.unbounded.good
rangecastbounds.chpl:21: error: cannot cast range from boundKind.both to boundKind.neither
